<resources>
    <string name="app_name">Messia</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_phone">Phone</string>
    <string name="title_activity_template" translatable="false">TemplateActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crash_report_sent">Crash report has been sent</string>
    <string name="title_activity_profile_info" translatable="false">ProfileInfoActivity</string>
    <string name="error_field_required">This field is required</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_dialing">Dial</string>
    <string name="nav_dialogs">Dialogs</string>
    <string name="nav_exit">Exit</string>
    <string name="nav_my_profile">My profile</string>
    <string name="enter_something_first">Enter something first</string>
    <string name="user_already_in_contact_list">User is already in your friend list</string>
    <string name="user_is_registered_but_not_friended">User is registered, but missing in your contacts</string>
    <string name="user_not_using_app">User is not using GeeChat, invite!</string>
    <string name="cancel">Cancel</string>
    <string name="enter_phone">Enter phone</string>
    <string name="invite">Invite</string>
    <string name="you">You</string>
    <string name="error_in_opening_file">"An error during opening file, reason: "</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="choose_from_file">Choose from files</string>
    <string name="elect_pic">Select Picture</string>
    <string name="select_file">Select a File</string>
    <string name="contacts">Contacts</string>
    <string name="dialogs">Chats</string>
    <string name="missing_call" translatable="false">Missing call</string>
    <string name="title_activity_login_signup" translatable="false">Sign in</string>
    <string name="prompt_login" translatable="false">Nickname</string>
    <string name="repeat_password" translatable="false">Repeat password</string>
    <string name="no_account_yet" translatable="false">No account yet?</string>
    <string name="forgot_password" translatable="false">Forgot password?</string>
    <string name="sign_up" translatable="false">Sign up</string>
    <string name="already_have_account" translatable="false">Already have an account</string>
    <string name="error_login_too_short" translatable="false">Login too short</string>
    <string name="error_passwords_dont_match" translatable="false">Passwords don\'t match</string>
    <string name="send_code" translatable="false">Send code</string>
    <string name="hint_code" translatable="false">Code</string>
    <string name="wrong_number" translatable="false">Wrong number?</string>

</resources>
